style.css
/* ... */
.rte blockquote p {
	max-width:100%;
	padding:10px;
}
.rte .alignleft {
	float:left;
	margin: 20px 20px 20px 0px;	
}
.rte .alignright {
	float:right;
	margin: 20px 0px 20px 20px;	
}
.rte .aligncenter {
	display:block;
	margin: 0px auto;	
}
.rte p.wp-caption-text {
	text-align:center;
	padding: 10px;
    font-size: 14px;
}

/* ------------------------------------------------
 Shop - Global
------------------------------------------------ */

.post-type-archive-product > .pb_default-wrap,
.tax-product_cat > .pb_default-wrap,
.single-product > .pb_default-wrap {
	background-color: #f3f3f3;
}
.woocommerce .woocommerce-breadcrumb {
	padding:20px 0px;	
}
.woocommerce .woocommerce-breadcrumb a {
	color: #fff;
    background-color: #fd6116;
    text-decoration: none;
    padding: 5px;
    font-size: 14px;	
	-webkit-transition: all 0.4s ease;
    -moz-transition: all 0.4s ease;
    -o-transition: all 0.4s ease;
    transition: all 0.4s ease;
}
.woocommerce .woocommerce-breadcrumb a:hover {
    background-color: #32c1eb;
}

/* ------------------------------------------------
 Shop - Product Archives
------------------------------------------------ */

/* ------------------------------------------------
 Footer
------------------------------------------------ */

.pb_main-footer {
	background-color: #303030;
    width: 100%;
    color: #fff;
	font-size:14px;
	padding:60px 0px;
	border-top: 4px solid #fd6116;
}
.pb_main-footer .pb_wrap {
	display: -webkit-box;
  	display: -moz-box;
  	display: -ms-flexbox;
  	display: -webkit-flex;
  	display: flex; 
	flex-flow:row wrap;
}
.pb_footer-section {
  	-webkit-box-flex: 1;
  	-moz-box-flex: 1;
  	-webkit-flex: 1;
  	-ms-flex: 1;
  	flex: 1;
	flex-basis:25%;
}
.pb_main-footer h2 {
	font-size:16px;
	padding-bottom:8px;
	border-bottom:1px solid #4c4c4c;
	margin-right:40px;
	margin-bottom:20px;
	font-weight:300;
	font-family: 'loewheavy', serif;
}
.pb_footer-section li {
	padding-bottom:5px;
}
.pb_footer-section a {
	color:#bfbfbf;
	text-decoration:none;
}
.pb_footer-section a:hover {
	color:#fd6116;
}
.pb_footer-social {
	padding-bottom:20px;
}
.pb_footer-social li {
	display:inline-block;
	margin-left:4px;	
}
.pb_footer-social a i {
	color:#303030;	
}
.pb_footer-social a .fa-circle {
	color:#fff;	
	-webkit-transition: all 0.4s ease;
    -moz-transition: all 0.4s ease;
    -o-transition: all 0.4s ease;
    transition: all 0.4s ease;
}
.pb_footer-social a:hover .fa-circle {
	color:#fd6116;	
}
.pb_footer-newsletter input {
	padding:5px;
	border:none;
}
#mc_embed_signup .button {
	padding:5px!important;
	border:none!important;
	cursor:pointer!important;
	-webkit-transition: all 0.4s ease!important;
    -moz-transition: all 0.4s ease!important;
    -o-transition: all 0.4s ease!important;
    transition: all 0.4s ease!important;
}
#mc_embed_signup .button:hover {
	background-color:#fd6116!important;
	color:#fff!important;
}
/* Global Signup */

.pb_global-signup {
	padding: 10px 0px;
    color: #fff;
    background-color: #fd6116;
    text-align: center;
    position: fixed;
    width: 100%;
    bottom: 0px;
	line-height: 130%;
}
.pb_footer-signup-relative .pb_global-signup {
	position:relative;
}
.pb_footer-signup-cont {
	display: -webkit-box;
  	display: -moz-box;
  	display: -ms-flexbox;
  	display: -webkit-flex;
  	display: flex; 
	-webkit-justify-content: center; 
	justify-content: center;	
}
.mc-field-group {
	position:relative;	
}
.pb_footer-signup-cont > div {
	padding-right:20px;	
}
.pb_global-signup .pb_wrap {
	padding:0px 60px;	
}
.pb_global-signup form {
	padding-top:10px;	
}
.pb_global-signup input[type=text], 
.pb_global-signup input[type=email] {
	border: none;
    padding: 5px 10px;	
}
.pb_global-signup input[type=submit] {
	padding: 5px 10px;
    border: none;
    color: #f3f3f3;
    background-color: #303030;	
}
#mc_embed_signup div.mce_inline_error {
    background-color: #32c1eb!important;
    font-weight: normal!important;
    position: absolute!important;
    margin: 0px 0px 0px 0px!important;
    bottom: 26px!important;
    left: 43px!important;
    -webkit-box-shadow: 0px 0px 12px 0px rgba(0,0,0,0.56);
    -moz-box-shadow: 0px 0px 12px 0px rgba(0,0,0,0.56);
    box-shadow: 0px 0px 12px 0px rgba(0,0,0,0.56);
}
.pb_global-signup-close {
	border: none;
    background-color: transparent;
    cursor: pointer;
    position: absolute;
    top: 50%;
    right: 5px;
    margin-top: -13px;	
}
.pb_global-signup-close .fa-stack {
	font-size:12px;		
}
.pb_footer-signup-relative .pb_global-signup-close {
	display:none;	
}
#mce-responses {
	padding-top: 10px;
}
#mce-responses a {
	color:#fff;
	text-decoration:underline;	
}
@media only screen and (max-width : 1120px) {
	.pb_main-header .pb_default-wrap {
		padding:20px;	
	}
	.pb_main-nav-cont {
		padding-right:20px;	
	}
}


@media only screen and (max-width : 800px) {
	.owl-carousel-home .item {
		height:300px;	
	}
	.pb_home-slider-cont h2 {
		font-size:36px;	
	}
	.pb_footer-left {
    	width: 100%;
    	float: none;
	}
	.pb_footer-right {
		padding-top:40px;
    	width: 100%;
    	float: none;
		text-align:left;
	}
	.pb_main-footer .pb_footer-right h2 {
		margin:0px 0px 20px 0px;	
	}
	
	/* Archive Pages */
	.pb_index-post-meta .pb_index-category a {
		margin-bottom:5px;	
	}
	.pb_index-options nav {
		text-align:center;	
	}
	.pb_index-list li {
		display: block;	
	}
	.pb_index-img {
		max-width:300px;
		margin:0px auto 20px auto;	
	}
	.pb_index-excerpt {
		text-align:center;	
		padding-left:0px;
	}
}
/* ... */

